Created dev scripts. Created main script hub. Setup reverse proxy from gateway to react app

--- a/client/my-app/Dockerfile
+++ b/client/my-app/Dockerfile
@@ -16,8 +16,10 @@ COPY . .
 RUN npm run build
 
 
-RUN ["pwd"]
-RUN ["ls"]
+# RUN ["pwd"]
+# RUN ["ls"]
+
+EXPOSE 5000
 
 CMD [ "serve", "-s", "build"]
 
