--- a/server/gateway/Dockerfile
+++ b/server/gateway/Dockerfile
@@ -2,6 +2,10 @@ FROM scratch
 
 COPY gateway /gateway
 
+#RUN chmod +x /gateway/main.go
+
+#ADD server.crt /etc/ssl/certs/
+
 EXPOSE 443
 
 ENTRYPOINT ["/gateway"]
